force-app/main/default/objects/copado__Branch_Management_Permission__c/copado__Branch_Management_Permission__c.object-meta.xml
<CustomObject>
    <description>This object stores the permissions relating to a user per environment</description>
    <label>Pipeline Permission</label>
    <nameField>
        <displayFormat>BMP-{000000}</displayFormat>
        <label>Pipeline Permission Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>