force-app/main/default/objects/copado__Branch_Management_Permission__c/fields/copado__Allow_Deployments__c.field-meta.xml
<CustomField>
    <fullName>copado__Allow_Deployments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Deployments</label>
    <type>Checkbox</type>
</CustomField>